{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "873e6326-8918-47fa-9a27-87b150ab9711",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "3ce056bb-ff96-4811-9434-8061dbf6ca73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CursorPos",
                    "type": "Value",
                    "id": "e6ad816b-037f-491b-9f69-19580871ca1c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MainAction",
                    "type": "Button",
                    "id": "0c1d443d-2e4a-473a-ac9d-19529ebed871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "757536d5-9534-4e0f-af72-f3f0dd92b359",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextWeapon",
                    "type": "Button",
                    "id": "71c9ace8-84cd-4149-8b8b-d499cf6dadb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7f7715f7-82a7-4b66-b25d-dd0bc9e6f1af",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e16f849-9167-446b-858b-ad3c921ba546",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c946a310-dce0-401c-a7b2-0e64ffc7e5b6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61937af0-f1e8-4a99-920b-bc24f5cf26d6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f3f6767d-7752-43c9-9d1a-e66626c2f7a1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fcb09706-2a0e-465f-a0e2-25a1873688f7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "531b2939-b899-498c-a5f2-8d040379c57c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bf3b943c-d45f-4531-8915-579bd4dc2ac6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e553d23c-68a1-4587-b825-d83fef1787a2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}